--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "request-promise": "^4.2.5",
+    "shelljs": "^0.8.3",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.0"
   }
