--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongodb": "^3.4.1",
+    "mongoose": "^5.8.3",
     "request-promise": "^4.2.5",
     "shelljs": "^0.8.3",
     "winston": "^3.2.1",
